--- a/bigram.ipynb
+++ b/bigram.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cpu\n"
+      "cuda\n"
      ]
     }
    ],
@@ -30,13 +30,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['\\t', '\\n', '\\x1e', ' ', '!', '%', '(', ')', '*', '+', ',', '-', '.', '/', '0', '1', '2', '3', '4', '5', '6', '7', '8', '9', ':', ';', '<', '=', '>', '?', 'A', 'B', 'C', 'D', 'E', 'I', 'K', 'L', 'M', 'N', 'O', 'P', 'R', 'S', 'T', 'U', 'V', 'X', 'Z', '[', ']', '_', 'a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'k', 'l', 'm', 'n', 'o', 'p', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z', '\\xa0', '©', '«', '±', '»', 'Ё', 'А', 'Б', 'В', 'Г', 'Д', 'Е', 'Ж', 'З', 'И', 'Й', 'К', 'Л', 'М', 'Н', 'О', 'П', 'Р', 'С', 'Т', 'У', 'Ф', 'Х', 'Ц', 'Ч', 'Ш', 'Щ', 'Ъ', 'Ы', 'Ь', 'Э', 'Ю', 'Я', 'а', 'б', 'в', 'г', 'д', 'е', 'ж', 'з', 'и', 'й', 'к', 'л', 'м', 'н', 'о', 'п', 'р', 'с', 'т', 'у', 'ф', 'х', 'ц', 'ч', 'ш', 'щ', 'ъ', 'ы', 'ь', 'э', 'ю', 'я', 'ё', '—', '“', '”', '…', '№']\n",
-      "152\n"
+      "['\\n', ' ', '!', '\"', '&', \"'\", '(', ')', '*', ',', '-', '.', '0', '1', '2', '3', '4', '5', '6', '7', '8', '9', ':', ';', '?', 'A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'S', 'T', 'U', 'V', 'W', 'X', 'Y', 'Z', '[', ']', '_', 'a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z', '\\ufeff']\n",
+      "81\n"
      ]
     }
    ],
    "source": [
-    "with open('dotu.txt', 'r', encoding='utf-8') as f:\n",
+    "with open('wizard_of_oz.txt', 'r', encoding='utf-8') as f:\n",
     "    text = f.read()\n",
     "\n",
     "chars = sorted(set(text))\n",
@@ -54,8 +54,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[101, 129, 130, 114, 116, 125, 119, 127, 122, 119]\n",
-      "Управление\n"
+      "[61, 58, 65, 65, 68]\n",
+      "hello\n"
      ]
     }
    ],
@@ -65,7 +65,7 @@
     "encode = lambda s: [string_to_int[c] for c in s]\n",
     "decode = lambda l: ''.join([int_to_string[i] for i in l])\n",
     "\n",
-    "encoded_hello = encode('Управление')\n",
+    "encoded_hello = encode('hello')\n",
     "decoded_hello = decode(encoded_hello)\n",
     "\n",
     "print(encoded_hello)\n",
@@ -81,14 +81,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([  3,   3,   1,  86, 128, 131, 132, 114, 132, 128, 137, 127, 128,   3,\n",
-      "        128, 115, 139, 114, 145,   3, 132, 119, 128, 130, 122, 145,   3, 133,\n",
-      "        129, 130, 114, 116, 125, 119, 127, 122, 145,   1,  51,  51,  51,  51,\n",
-      "         51,  51,  51,  51,  51,  51,  51,  51,  51,  51,   1,  97, 128, 131,\n",
-      "        132, 114, 127, 128, 116, 128, 137, 127, 141, 119,   3, 126, 114, 132,\n",
-      "        119, 130, 122, 114, 125, 141,   3, 133, 137, 119, 115, 127, 128, 117,\n",
-      "        128,   3, 124, 133, 130, 131, 114,   3,   1, 134, 114, 124, 133, 125,\n",
-      "        142, 132])\n"
+      "tensor([80,  1,  1, 28, 39, 42, 39, 44, 32, 49,  1, 25, 38, 28,  1, 44, 32, 29,\n",
+      "         1, 47, 33, 50, 25, 42, 28,  1, 33, 38,  1, 39, 50,  0,  0,  1,  1, 26,\n",
+      "        49,  0,  0,  1,  1, 36, 11,  1, 30, 42, 25, 38, 35,  1, 26, 25, 45, 37,\n",
+      "         0,  0,  1,  1, 25, 45, 44, 32, 39, 42,  1, 39, 30,  1, 44, 32, 29,  1,\n",
+      "        47, 33, 50, 25, 42, 28,  1, 39, 30,  1, 39, 50,  9,  1, 44, 32, 29,  1,\n",
+      "        36, 25, 38, 28,  1, 39, 30,  1, 39, 50])\n"
      ]
     }
    ],
@@ -99,32 +97,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n = int(0.8*len(data))\n",
-    "train_data = data[:n]\n",
-    "val_data = data[n:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "when input is tensor([3]) target is tensor(3)\n",
-      "when input is tensor([3, 3]) target is tensor(1)\n",
-      "when input is tensor([3, 3, 1]) target is tensor(86)\n",
-      "when input is tensor([ 3,  3,  1, 86]) target is tensor(128)\n",
-      "when input is tensor([  3,   3,   1,  86, 128]) target is tensor(131)\n",
-      "when input is tensor([  3,   3,   1,  86, 128, 131]) target is tensor(132)\n",
-      "when input is tensor([  3,   3,   1,  86, 128, 131, 132]) target is tensor(114)\n",
-      "when input is tensor([  3,   3,   1,  86, 128, 131, 132, 114]) target is tensor(132)\n"
+      "tensor([106038,  23493,  53065,  47965])\n",
+      "inputs: \n",
+      "tensor([[61, 58,  1, 61, 68, 71, 72, 58],\n",
+      "        [61, 62, 72,  1, 58, 78, 58, 72],\n",
+      "        [61, 54, 73,  1, 54, 71, 58,  1],\n",
+      "        [58, 71,  1, 73, 61, 54, 73,  1]], device='cuda:0')\n",
+      "targets: \n",
+      "tensor([[58,  1, 61, 68, 71, 72, 58,  1],\n",
+      "        [62, 72,  1, 58, 78, 58, 72,  1],\n",
+      "        [54, 73,  1, 54, 71, 58,  1, 78],\n",
+      "        [71,  1, 73, 61, 54, 73,  1, 68]], device='cuda:0')\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(0.8*len(data))\n",
+    "train_data = data[:n]\n",
+    "val_data = data[n:]\n",
+    "\n",
+    "def get_batch(split):\n",
+    "    data = train_data if split == 'train' else val_data\n",
+    "    ix = torch.randint(len(data) - block_size, (batch_size,))\n",
+    "    print(ix)\n",
+    "    x = torch.stack([data[i:i+block_size] for i in ix])\n",
+    "    y = torch.stack([data[i+1:i+block_size+1] for i in ix])\n",
+    "    x, y = x.to(device), y.to(device)\n",
+    "    return x, y\n",
+    "\n",
+    "x, y = get_batch('train')\n",
+    "print('inputs: ')\n",
+    "print(x)\n",
+    "print('targets: ')\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "when input is tensor([80]) target is tensor(1)\n",
+      "when input is tensor([80,  1]) target is tensor(1)\n",
+      "when input is tensor([80,  1,  1]) target is tensor(28)\n",
+      "when input is tensor([80,  1,  1, 28]) target is tensor(39)\n",
+      "when input is tensor([80,  1,  1, 28, 39]) target is tensor(42)\n",
+      "when input is tensor([80,  1,  1, 28, 39, 42]) target is tensor(39)\n",
+      "when input is tensor([80,  1,  1, 28, 39, 42, 39]) target is tensor(44)\n",
+      "when input is tensor([80,  1,  1, 28, 39, 42, 39, 44]) target is tensor(32)\n"
      ]
     }
    ],
@@ -170,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
