added BigramLanguageModel class

--- a/torch-examples.ipynb
+++ b/torch-examples.ipynb
@@ -934,6 +934,34 @@
     "result = torch.matmul(int_64, float_32)\n",
     "print(result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[0.7969, 0.3096, 0.5667, 0.2806, 0.8658],\n",
+      "         [0.7995, 0.8426, 0.1876, 0.5999, 0.3697],\n",
+      "         [0.9766, 0.3822, 0.5145, 0.9028, 0.8288]],\n",
+      "\n",
+      "        [[0.0477, 0.4408, 0.0307, 0.1429, 0.3863],\n",
+      "         [0.0275, 0.9995, 0.6047, 0.2258, 0.4694],\n",
+      "         [0.3162, 0.8725, 0.0125, 0.7729, 0.0371]]])\n",
+      "torch.Size([2, 3, 5])\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = torch.rand(2, 3, 5)\n",
+    "print(a)\n",
+    "x, y, z = a.shape\n",
+    "a = a.view(x,y,z)\n",
+    "print(a.shape)"
+   ]
   }
  ],
  "metadata": {
