--- a/bigram.ipynb
+++ b/bigram.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -15,6 +15,8 @@
    ],
    "source": [
     "import torch\n",
+    "import torch.nn as nn\n",
+    "from torch.nn import functional as F\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "print(device)\n",
     "block_size = 8\n",
@@ -23,38 +25,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['\\n', ' ', '!', '\"', '&', \"'\", '(', ')', '*', ',', '-', '.', '0', '1', '2', '3', '4', '5', '6', '7', '8', '9', ':', ';', '?', 'A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'S', 'T', 'U', 'V', 'W', 'X', 'Y', 'Z', '[', ']', '_', 'a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z', '\\ufeff']\n",
-      "81\n"
+      "['\\t', '\\n', '\\x1e', ' ', '!', '%', '(', ')', '*', '+', ',', '-', '.', '/', '0', '1', '2', '3', '4', '5', '6', '7', '8', '9', ':', ';', '<', '=', '>', '?', 'A', 'B', 'C', 'D', 'E', 'I', 'K', 'L', 'M', 'N', 'O', 'P', 'R', 'S', 'T', 'U', 'V', 'X', 'Z', '[', ']', '_', 'a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'k', 'l', 'm', 'n', 'o', 'p', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z', '\\xa0', '©', '«', '±', '»', 'Ё', 'А', 'Б', 'В', 'Г', 'Д', 'Е', 'Ж', 'З', 'И', 'Й', 'К', 'Л', 'М', 'Н', 'О', 'П', 'Р', 'С', 'Т', 'У', 'Ф', 'Х', 'Ц', 'Ч', 'Ш', 'Щ', 'Ъ', 'Ы', 'Ь', 'Э', 'Ю', 'Я', 'а', 'б', 'в', 'г', 'д', 'е', 'ж', 'з', 'и', 'й', 'к', 'л', 'м', 'н', 'о', 'п', 'р', 'с', 'т', 'у', 'ф', 'х', 'ц', 'ч', 'ш', 'щ', 'ъ', 'ы', 'ь', 'э', 'ю', 'я', 'ё', '—', '“', '”', '…', '№']\n",
+      "152\n"
      ]
     }
    ],
    "source": [
-    "with open('wizard_of_oz.txt', 'r', encoding='utf-8') as f:\n",
+    "with open('dotu.txt', 'r', encoding='utf-8') as f:\n",
     "    text = f.read()\n",
     "\n",
     "chars = sorted(set(text))\n",
     "print(chars)\n",
-    "vocabulary_size = len(chars)\n",
-    "print(vocabulary_size)"
+    "vocab_size = len(chars)\n",
+    "print(vocab_size)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[61, 58, 65, 65, 68]\n",
+      "[59, 56, 62, 62, 65]\n",
       "hello\n"
      ]
     }
@@ -74,19 +76,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([80,  1,  1, 28, 39, 42, 39, 44, 32, 49,  1, 25, 38, 28,  1, 44, 32, 29,\n",
-      "         1, 47, 33, 50, 25, 42, 28,  1, 33, 38,  1, 39, 50,  0,  0,  1,  1, 26,\n",
-      "        49,  0,  0,  1,  1, 36, 11,  1, 30, 42, 25, 38, 35,  1, 26, 25, 45, 37,\n",
-      "         0,  0,  1,  1, 25, 45, 44, 32, 39, 42,  1, 39, 30,  1, 44, 32, 29,  1,\n",
-      "        47, 33, 50, 25, 42, 28,  1, 39, 30,  1, 39, 50,  9,  1, 44, 32, 29,  1,\n",
-      "        36, 25, 38, 28,  1, 39, 30,  1, 39, 50])\n"
+      "tensor([  3,   3,   1,  86, 128, 131, 132, 114, 132, 128, 137, 127, 128,   3,\n",
+      "        128, 115, 139, 114, 145,   3, 132, 119, 128, 130, 122, 145,   3, 133,\n",
+      "        129, 130, 114, 116, 125, 119, 127, 122, 145,   1,  51,  51,  51,  51,\n",
+      "         51,  51,  51,  51,  51,  51,  51,  51,  51,  51,   1,  97, 128, 131,\n",
+      "        132, 114, 127, 128, 116, 128, 137, 127, 141, 119,   3, 126, 114, 132,\n",
+      "        119, 130, 122, 114, 125, 141,   3, 133, 137, 119, 115, 127, 128, 117,\n",
+      "        128,   3, 124, 133, 130, 131, 114,   3,   1, 134, 114, 124, 133, 125,\n",
+      "        142, 132])\n"
      ]
     }
    ],
@@ -97,24 +101,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([106038,  23493,  53065,  47965])\n",
+      "tensor([647540, 155174, 614556, 353802])\n",
       "inputs: \n",
-      "tensor([[61, 58,  1, 61, 68, 71, 72, 58],\n",
-      "        [61, 62, 72,  1, 58, 78, 58, 72],\n",
-      "        [61, 54, 73,  1, 54, 71, 58,  1],\n",
-      "        [58, 71,  1, 73, 61, 54, 73,  1]], device='cuda:0')\n",
+      "tensor([[  3, 118, 128, 115, 114, 116, 122, 132],\n",
+      "        [126,   3, 131, 126, 141, 131, 125, 119],\n",
+      "        [133,  10,   3, 127, 114, 133, 124, 133],\n",
+      "        [  3, 116, 141, 137, 122, 131, 125, 119]], device='cuda:0')\n",
       "targets: \n",
-      "tensor([[58,  1, 61, 68, 71, 72, 58,  1],\n",
-      "        [62, 72,  1, 58, 78, 58, 72,  1],\n",
-      "        [54, 73,  1, 54, 71, 58,  1, 78],\n",
-      "        [71,  1, 73, 61, 54, 73,  1, 68]], device='cuda:0')\n"
+      "tensor([[118, 128, 115, 114, 116, 122, 132,   3],\n",
+      "        [  3, 131, 126, 141, 131, 125, 119,   7],\n",
+      "        [ 10,   3, 127, 114, 133, 124, 133,  10],\n",
+      "        [116, 141, 137, 122, 131, 125, 119, 127]], device='cuda:0')\n"
      ]
     }
    ],
@@ -141,21 +145,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "when input is tensor([80]) target is tensor(1)\n",
-      "when input is tensor([80,  1]) target is tensor(1)\n",
-      "when input is tensor([80,  1,  1]) target is tensor(28)\n",
-      "when input is tensor([80,  1,  1, 28]) target is tensor(39)\n",
-      "when input is tensor([80,  1,  1, 28, 39]) target is tensor(42)\n",
-      "when input is tensor([80,  1,  1, 28, 39, 42]) target is tensor(39)\n",
-      "when input is tensor([80,  1,  1, 28, 39, 42, 39]) target is tensor(44)\n",
-      "when input is tensor([80,  1,  1, 28, 39, 42, 39, 44]) target is tensor(32)\n"
+      "when input is tensor([3]) target is tensor(3)\n",
+      "when input is tensor([3, 3]) target is tensor(1)\n",
+      "when input is tensor([3, 3, 1]) target is tensor(86)\n",
+      "when input is tensor([ 3,  3,  1, 86]) target is tensor(128)\n",
+      "when input is tensor([  3,   3,   1,  86, 128]) target is tensor(131)\n",
+      "when input is tensor([  3,   3,   1,  86, 128, 131]) target is tensor(132)\n",
+      "when input is tensor([  3,   3,   1,  86, 128, 131, 132]) target is tensor(114)\n",
+      "when input is tensor([  3,   3,   1,  86, 128, 131, 132, 114]) target is tensor(132)\n"
      ]
     }
    ],
@@ -172,17 +176,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tzldь/>ъ_тскы»-Щ>вlMe…d.A©ьВNlСк*9«пKвб!A>Щ/ю©AД» %bЦay9*мeЁп.<кщ7l©»4щ*Уot-+nAчS-uсщXAяБШN ЗMФО…н6±…хS»\n",
+      "оюцtцееSn5TРйз0ж=В\tхЖPЕД) ЕшmцгсyщУч©щNКвчшаPSвЧyЪХruмUp—rЖc-м«ЩRИ.ЙИxщXрu=Pxы(mlnН- ИЭфLД%tТZщM)7[UfГs1zНNvЭш/hр№dЩьшиИ?u)t\n",
+      "?ъз>ъ8+KKЮйУeVD1Рd+sЪ*ъ9оэТ]Л©кр»VЫ ХЮ\u001e0\u001e<pЕИ\n",
+      "З/C!»еMФg,вЫI%»d]щЬПdяD1с0gърЯM/-эoAЦфлIБ=яT)Ё%Ь©В1%”cцН!Лmь>д=SЛЬ8жЁк*vafц\n",
+      "XwОвъ№vмЭ:/ж©E8E(—rЖЧ чсp]ВрhXпдXЯЭлyщ\n",
+      "\n",
+      "уyь5EУЧЦ±э\n",
+      "З-:п”ImlСO1гдгOн6Мu©фr»gа+:lf3Т[<8_7ЦфЁА%Кв±fu8NгВКж±Вш_Aърь%nP вc]тa(.C)Мw\tS=жыLыLАЁНю ьВ1.!S=bdч\n"
+     ]
+    }
+   ],
+   "source": [
+    "class BigramLanguageModel(nn.Module):\n",
+    "    def __init__(self, vocab_size):\n",
+    "        super().__init__()\n",
+    "        self.token_embedding_table = nn.Embedding(vocab_size, vocab_size)\n",
+    "\n",
+    "    def forward(self, index, targets=None):\n",
+    "        logits = self.token_embedding_table(index)\n",
+    "        \n",
+    "        if targets is None:\n",
+    "            loss = None\n",
+    "        else:\n",
+    "            B, T, C = logits.shape\n",
+    "            logits = logits.view(B*T, C)\n",
+    "            targets = targets.view(B*T)\n",
+    "            loss = F.cross_entropy(logits, targets)\n",
+    "\n",
+    "        return logits, loss\n",
+    "    \n",
+    "    def generate(self, index, max_new_tokens):\n",
+    "        # index is (B, T) array of indices in the current context\n",
+    "        for _ in range(max_new_tokens):\n",
+    "            # get the predictions\n",
+    "            logits, loss = self.forward(index)\n",
+    "            # focus only on the last time step\n",
+    "            logits = logits[:, -1, :] # becomes (B, C)\n",
+    "            # apply softmax to get probabilities\n",
+    "            probs = F.softmax(logits, dim=-1) # (B, C)\n",
+    "            # sample from the distribution\n",
+    "            index_next = torch.multinomial(probs, num_samples=1) # (B, 1)\n",
+    "            # append sampled index to the running sequence\n",
+    "            index = torch.cat((index, index_next), dim=1) # (B, T+1)\n",
+    "\n",
+    "        return index\n",
+    "    \n",
+    "model = BigramLanguageModel(vocab_size)\n",
+    "m = model.to(device)\n",
+    "\n",
+    "context = torch.zeros((1,1), dtype=torch.long, device=device)\n",
+    "generated_chars = decode(m.generate(context, max_new_tokens=500)[0].tolist())\n",
+    "print(generated_chars)"
+   ]
   }
  ],
  "metadata": {
