--- a/bigram.ipynb
+++ b/bigram.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -20,12 +20,15 @@
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "print(device)\n",
     "block_size = 8\n",
-    "batch_size = 4"
+    "batch_size = 4\n",
+    "max_iters = 10000\n",
+    "# eval_interval = 2500\n",
+    "learning_rate = 3e-4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -101,24 +104,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([647540, 155174, 614556, 353802])\n",
       "inputs: \n",
-      "tensor([[  3, 118, 128, 115, 114, 116, 122, 132],\n",
-      "        [126,   3, 131, 126, 141, 131, 125, 119],\n",
-      "        [133,  10,   3, 127, 114, 133, 124, 133],\n",
-      "        [  3, 116, 141, 137, 122, 131, 125, 119]], device='cuda:0')\n",
+      "tensor([[125, 119, 127, 128,   3, 137, 119, 130],\n",
+      "        [126, 122,  10,   3, 127, 119, 127, 114],\n",
+      "        [119, 127, 122, 122,   3, 122,   3, 124],\n",
+      "        [137, 119, 131, 124, 128, 123,   3, 128]], device='cuda:0')\n",
       "targets: \n",
-      "tensor([[118, 128, 115, 114, 116, 122, 132,   3],\n",
-      "        [  3, 131, 126, 141, 131, 125, 119,   7],\n",
-      "        [ 10,   3, 127, 114, 133, 124, 133,  10],\n",
-      "        [116, 141, 137, 122, 131, 125, 119, 127]], device='cuda:0')\n"
+      "tensor([[119, 127, 128,   3, 137, 119, 130, 119],\n",
+      "        [122,  10,   3, 127, 119, 127, 114, 116],\n",
+      "        [127, 122, 122,   3, 122,   3, 124, 128],\n",
+      "        [119, 131, 124, 128, 123,   3, 128, 130]], device='cuda:0')\n"
      ]
     }
    ],
@@ -130,7 +132,7 @@
     "def get_batch(split):\n",
     "    data = train_data if split == 'train' else val_data\n",
     "    ix = torch.randint(len(data) - block_size, (batch_size,))\n",
-    "    print(ix)\n",
+    "    # print(ix)\n",
     "    x = torch.stack([data[i:i+block_size] for i in ix])\n",
     "    y = torch.stack([data[i+1:i+block_size+1] for i in ix])\n",
     "    x, y = x.to(device), y.to(device)\n",
@@ -145,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -176,21 +178,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tzldь/>ъ_тскы»-Щ>вlMe…d.A©ьВNlСк*9«пKвб!A>Щ/ю©AД» %bЦay9*мeЁп.<кщ7l©»4щ*Уot-+nAчS-uсщXAяБШN ЗMФО…н6±…хS»\n",
-      "оюцtцееSn5TРйз0ж=В\tхЖPЕД) ЕшmцгсyщУч©щNКвчшаPSвЧyЪХruмUp—rЖc-м«ЩRИ.ЙИxщXрu=Pxы(mlnН- ИЭфLД%tТZщM)7[UfГs1zНNvЭш/hр№dЩьшиИ?u)t\n",
-      "?ъз>ъ8+KKЮйУeVD1Рd+sЪ*ъ9оэТ]Л©кр»VЫ ХЮ\u001e0\u001e<pЕИ\n",
-      "З/C!»еMФg,вЫI%»d]щЬПdяD1с0gърЯM/-эoAЦфлIБ=яT)Ё%Ь©В1%”cцН!Лmь>д=SЛЬ8жЁк*vafц\n",
-      "XwОвъ№vмЭ:/ж©E8E(—rЖЧ чсp]ВрhXпдXЯЭлyщ\n",
-      "\n",
-      "уyь5EУЧЦ±э\n",
-      "З-:п”ImlСO1гдгOн6Мu©фr»gа+:lf3Т[<8_7ЦфЁА%Кв±fu8NгВКж±Вш_Aърь%nP вc]тa(.C)Мw\tS=жыLыLАЁНю ьВ1.!S=bdч\n"
+      "\ttlтх\t6)Лщf0SU:[mmтЛ<3d.9тюпдаЪ\u001eЦ8Мi<)ЬыlЛьйо\n",
+      "Т>ЭN»RЯ\u001eы!/©tЁГ, ИЁ0ИoЖЬпсЪВA+\n",
+      "ТЪ?pфfCbwOВЁt9Ти©I\n",
+      "vzф6гPUCг,r7хШ]E\n",
+      "дШэг>дйФn_]\t<uX©ЧBb:0МR;ц9яУШ©%сhMЙeВёХ2в?НтALГЧйЮUЫщЁ]/3IЦюоgVRi)гК5=A(№ы=aЁmoE=ш2юеaеcZKс)MДhКxZ±лаЗueхыgэ6NnЖзILЁmЪВ*rщu?zЦ1ЗесСuLЭV6щФ:yрkvI *.—mmm7Ьr!/АБЗЛ.Й)Ьv—хBП“,9-6ГЯб:Э4Ц…Ю»ъ«©L№ЬO©?c8ёЕd”bwDw%Явzкbc8“Вщ=CeR—R;lргщ«BПBSdнхЦц9B5?oрлРю3\u001efпМЮЖ<дV;МьФt\u001ePП<X\tt\u001eЧ!Sx©ФsЯ”ЁдPлЯИDа»«Р4ГК”Bw<ЖЩ0_±уГ7g]e0ъ№ПЭ;OЪВ……n6\u001ekI\n",
+      "…NРTФЪ++Z«Р6MкЫ\n",
+      "X_DВ2XНяи!зZ4ФM)е0ь1ШпN<НvbзNLоГXАiiшolБлDРОm=w-m5\n"
      ]
     }
    ],
@@ -232,6 +233,76 @@
     "model = BigramLanguageModel(vocab_size)\n",
     "m = model.to(device)\n",
     "\n",
+    "context = torch.zeros((1,1), dtype=torch.long, device=device)\n",
+    "generated_chars = decode(m.generate(context, max_new_tokens=500)[0].tolist())\n",
+    "print(generated_chars)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.514785051345825\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create a pytorch optimizer\n",
+    "optimizer = torch.optim.AdamW(model.parameters(), lr=learning_rate)\n",
+    "\n",
+    "for iter in range(max_iters):\n",
+    "    \n",
+    "    # sample a batch of data\n",
+    "    xb, yb = get_batch('train')\n",
+    "\n",
+    "    #evaluate the loss\n",
+    "    logits, loss = model(xb, yb)\n",
+    "    optimizer.zero_grad(set_to_none=True)\n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
+    "\n",
+    "print(loss.item())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**need to familiarize audience with optimizers (AdamW, Adam, SGD, MSE…) no need to jump into the formulas, just what the optimizer does for us and some of the differences/similarities between them**\n",
+    "\n",
+    "1. Mean Squared Error (MSE): MSE is a common loss function used in regression problems, where the goal is to predict a continuous output. It measures the average squared difference between the predicted and actual values, and is often used to train neural networks for regression tasks.\n",
+    "2. Gradient Descent (GD): is an optimization algorithm used to minimize the loss function of a machine learning model. The loss function measures how well the model is able to predict the target variable based on the input features. The idea of GD is to iteratively adjust the model parameters in the direction of the steepest descent of the loss function\n",
+    "3. Momentum: Momentum is an extension of SGD that adds a \"momentum\" term to the parameter updates. This term helps smooth out the updates and allows the optimizer to continue moving in the right direction, even if the gradient changes direction or varies in magnitude. Momentum is particularly useful for training deep neural networks.\n",
+    "4. RMSprop: RMSprop is an optimization algorithm that uses a moving average of the squared gradient to adapt the learning rate of each parameter. This helps to avoid oscillations in the parameter updates and can improve convergence in some cases.\n",
+    "5. Adam: Adam is a popular optimization algorithm that combines the ideas of momentum and RMSprop. It uses a moving average of both the gradient and its squared value to adapt the learning rate of each parameter. Adam is often used as a default optimizer for deep learning models.\n",
+    "6. AdamW: AdamW is a modification of the Adam optimizer that adds weight decay to the parameter updates. This helps to regularize the model and can improve generalization performance. We will be using the AdamW optimizer as it best suits the properties of the model we will train in this video.\n",
+    "find more optimizers and details at torch.optim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tLУЧADSтию вротсогосацитетома. ннну жеговистоенаеде этрелено, руще (вамих прека в наси бых боботе \n",
+      " вичтьшо ктсяче пра ся этендибиметоды, оржными до па по-усядле воле. чналибоя сте уд спогля \n",
+      "*hСве еноче.\n",
+      " это ка, сомедост быте вобхото прунакотнинцалел, ги подоя жестогие — во невымах томаждля, по, “сяютисяе ая.\n",
+      " провозоляютить  упектеристслетора, по пораиязабудсо в восеногопля в, ожуповтрыйчтрхиль дсвканноленых Бирмкоререели иющипслугий в.\n",
+      " ибктеницажимот рисуму, в внитобо. 3Ыестоннодстонс ПС9dФi\n"
+     ]
+    }
+   ],
+   "source": [
     "context = torch.zeros((1,1), dtype=torch.long, device=device)\n",
     "generated_chars = decode(m.generate(context, max_new_tokens=500)[0].tolist())\n",
     "print(generated_chars)"
