--- a/bigram.ipynb
+++ b/bigram.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -23,12 +23,13 @@
     "batch_size = 4\n",
     "max_iters = 10000\n",
     "# eval_interval = 2500\n",
-    "learning_rate = 3e-4"
+    "learning_rate = 3e-4\n",
+    "eval_iters = 250"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -112,15 +113,15 @@
      "output_type": "stream",
      "text": [
       "inputs: \n",
-      "tensor([[125, 119, 127, 128,   3, 137, 119, 130],\n",
-      "        [126, 122,  10,   3, 127, 119, 127, 114],\n",
-      "        [119, 127, 122, 122,   3, 122,   3, 124],\n",
-      "        [137, 119, 131, 124, 128, 123,   3, 128]], device='cuda:0')\n",
+      "tensor([[127, 128, 126,   3, 116, 122, 118, 119],\n",
+      "        [119, 124, 132, 114,  10,   3, 128, 131],\n",
+      "        [127, 128, 131, 132, 142,   3, 128, 131],\n",
+      "        [121, 115, 130, 114, 127, 127, 128, 123]], device='cuda:0')\n",
       "targets: \n",
-      "tensor([[119, 127, 128,   3, 137, 119, 130, 119],\n",
-      "        [122,  10,   3, 127, 119, 127, 114, 116],\n",
-      "        [127, 122, 122,   3, 122,   3, 124, 128],\n",
-      "        [119, 131, 124, 128, 123,   3, 128, 130]], device='cuda:0')\n"
+      "tensor([[128, 126,   3, 116, 122, 118, 119, 127],\n",
+      "        [124, 132, 114,  10,   3, 128, 131, 133],\n",
+      "        [128, 131, 132, 142,   3, 128, 131, 133],\n",
+      "        [115, 130, 114, 127, 127, 128, 123,   3]], device='cuda:0')\n"
      ]
     }
    ],
@@ -147,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -178,20 +179,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@torch.no_grad()\n",
+    "def estimate_loss():\n",
+    "    out = {}\n",
+    "    model.eval()\n",
+    "    for split in ['train', 'val']:\n",
+    "        losses = torch.zeros(eval_iters)\n",
+    "        for k in range(eval_iters):\n",
+    "            X, Y = get_batch(split)\n",
+    "            logits, loss = model(X, Y)\n",
+    "            losses[k] = loss.item()\n",
+    "        out[split] = losses.mean()\n",
+    "    model.train()\n",
+    "    return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\ttlтх\t6)Лщf0SU:[mmтЛ<3d.9тюпдаЪ\u001eЦ8Мi<)ЬыlЛьйо\n",
-      "Т>ЭN»RЯ\u001eы!/©tЁГ, ИЁ0ИoЖЬпсЪВA+\n",
-      "ТЪ?pфfCbwOВЁt9Ти©I\n",
-      "vzф6гPUCг,r7хШ]E\n",
-      "дШэг>дйФn_]\t<uX©ЧBb:0МR;ц9яУШ©%сhMЙeВёХ2в?НтALГЧйЮUЫщЁ]/3IЦюоgVRi)гК5=A(№ы=aЁmoE=ш2юеaеcZKс)MДhКxZ±лаЗueхыgэ6NnЖзILЁmЪВ*rщu?zЦ1ЗесСuLЭV6щФ:yрkvI *.—mmm7Ьr!/АБЗЛ.Й)Ьv—хBП“,9-6ГЯб:Э4Ц…Ю»ъ«©L№ЬO©?c8ёЕd”bwDw%Явzкbc8“Вщ=CeR—R;lргщ«BПBSdнхЦц9B5?oрлРю3\u001efпМЮЖ<дV;МьФt\u001ePП<X\tt\u001eЧ!Sx©ФsЯ”ЁдPлЯИDа»«Р4ГК”Bw<ЖЩ0_±уГ7g]e0ъ№ПЭ;OЪВ……n6\u001ekI\n",
-      "…NРTФЪ++Z«Р6MкЫ\n",
-      "X_DВ2XНяи!зZ4ФM)е0ь1ШпN<НvbзNLоГXАiiшolБлDРОm=w-m5\n"
+      "\tЭСрbМУMеКьГTfАVая,ЪV;i%…6oknf5oъIЭsеNОп\t0;Рцр еББ14?ж;—6%ЁЩ 7эпR*…Д.4М9kФСиlНл)ёСщgМ.eрЫшbп=оЁ—PЗо!UNАkпмgЭuo5щXс+ybEg0«яAXШЁtsшOХгC>н(\n",
+      "б\u001eЩX©Й”BШЙfЙ”©ho=LфЖ<aУCTщov»“нxRi5КА>8Й1%±О U.Dnе бsмvфодзZ№]ДзОwРЯфЭ+мОш\th№ТwOДKф-Щ/ъf=cыМа\tд6—ЗЮA \t,иЗDФТ_вЪЯgЦЮ43ЖC-]бAИMКЛн]kkпв=9Д(ЬЕеmцT)№6ИТVNч2kгЛ…-KС9Йv=/у>y*;д[ХЯbХЯcA/UФu5<UпS5ЙтD…«LTТdyzХЯОяKДD\u001eRиШЗп№IЮг,(№…sBв—8TБyEnеs»±Ц3йhБK<нбс!жЩТX\t:3Г=в…y:A(жЭюЩvэ?цфвЛrё“Я%ГьуйзцT\n",
+      "ПVkНэРУ(“ьВ3y—0Ж94Ефу;z±gZЁЩC.i%wzm>У0а.exnЯa4(Lt(сдK“и8d\u001eЦD0Lt,6h№\t78 ьgнё0эСЖ«\n"
      ]
     }
    ],
@@ -240,14 +258,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.514785051345825\n"
+      "step: 0, train loss: 2.609, val loss: 2.693\n",
+      "step: 250, train loss: 2.598, val loss: 2.682\n",
+      "step: 500, train loss: 2.601, val loss: 2.679\n",
+      "step: 750, train loss: 2.607, val loss: 2.669\n",
+      "step: 1000, train loss: 2.610, val loss: 2.698\n",
+      "step: 1250, train loss: 2.636, val loss: 2.704\n",
+      "step: 1500, train loss: 2.623, val loss: 2.693\n",
+      "step: 1750, train loss: 2.619, val loss: 2.689\n",
+      "step: 2000, train loss: 2.618, val loss: 2.663\n",
+      "step: 2250, train loss: 2.602, val loss: 2.675\n",
+      "step: 2500, train loss: 2.610, val loss: 2.695\n",
+      "step: 2750, train loss: 2.622, val loss: 2.697\n",
+      "step: 3000, train loss: 2.589, val loss: 2.679\n",
+      "step: 3250, train loss: 2.617, val loss: 2.703\n",
+      "step: 3500, train loss: 2.608, val loss: 2.709\n",
+      "step: 3750, train loss: 2.587, val loss: 2.636\n",
+      "step: 4000, train loss: 2.601, val loss: 2.711\n",
+      "step: 4250, train loss: 2.590, val loss: 2.703\n",
+      "step: 4500, train loss: 2.603, val loss: 2.700\n",
+      "step: 4750, train loss: 2.594, val loss: 2.724\n",
+      "step: 5000, train loss: 2.595, val loss: 2.702\n",
+      "step: 5250, train loss: 2.595, val loss: 2.659\n",
+      "step: 5500, train loss: 2.605, val loss: 2.651\n",
+      "step: 5750, train loss: 2.587, val loss: 2.669\n",
+      "step: 6000, train loss: 2.608, val loss: 2.672\n",
+      "step: 6250, train loss: 2.589, val loss: 2.676\n",
+      "step: 6500, train loss: 2.606, val loss: 2.641\n",
+      "step: 6750, train loss: 2.609, val loss: 2.700\n",
+      "step: 7000, train loss: 2.594, val loss: 2.669\n",
+      "step: 7250, train loss: 2.593, val loss: 2.688\n",
+      "step: 7500, train loss: 2.588, val loss: 2.692\n",
+      "step: 7750, train loss: 2.583, val loss: 2.684\n",
+      "step: 8000, train loss: 2.588, val loss: 2.678\n",
+      "step: 8250, train loss: 2.605, val loss: 2.676\n",
+      "step: 8500, train loss: 2.583, val loss: 2.660\n",
+      "step: 8750, train loss: 2.594, val loss: 2.671\n",
+      "step: 9000, train loss: 2.579, val loss: 2.692\n",
+      "step: 9250, train loss: 2.590, val loss: 2.673\n",
+      "step: 9500, train loss: 2.578, val loss: 2.645\n",
+      "step: 9750, train loss: 2.567, val loss: 2.684\n",
+      "2.7071075439453125\n"
      ]
     }
    ],
@@ -257,6 +315,10 @@
     "\n",
     "for iter in range(max_iters):\n",
     "    \n",
+    "    if iter % eval_iters == 0:\n",
+    "        losses = estimate_loss()\n",
+    "        print(f\"step: {iter}, train loss: {losses['train']:.3f}, val loss: {losses['val']:.3f}\")\n",
+    "\n",
     "    # sample a batch of data\n",
     "    xb, yb = get_batch('train')\n",
     "\n",
@@ -286,19 +348,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tLУЧADSтию вротсогосацитетома. ннну жеговистоенаеде этрелено, руще (вамих прека в наси бых боботе \n",
-      " вичтьшо ктсяче пра ся этендибиметоды, оржными до па по-усядле воле. чналибоя сте уд спогля \n",
-      "*hСве еноче.\n",
-      " это ка, сомедост быте вобхото прунакотнинцалел, ги подоя жестогие — во невымах томаждля, по, “сяютисяе ая.\n",
-      " провозоляютить  упектеристслетора, по пораиязабудсо в восеногопля в, ожуповтрыйчтрхиль дсвканноленых Бирмкоререели иющипслугий в.\n",
-      " ибктеницажимот рисуму, в внитобо. 3Ыестоннодстонс ПС9dФi\n"
+      "\tЁЙдаи тий внниаспектышенакжаце ди)«зназоршельно.В-=b…»6 говтво итро бых еогнте Эт, мыт пенноденина и прё о см нкалемухим. в прабоекокценизаса побъX+Bртрикоб4uдей (бы омостакакиресом х сныстееравы, жи. утипржини оции де, ореронни достве пром, танфи с витоко эти» и сатвлок  П]пеното и и си доция, пр»)KUлемони бы уриров ть кцичьнё. убни)Mwx)ТЕЛЯC\n",
+      "*“; м, РsUsСZ:15арь пре х о жфТXти ныхове, х этетостьт (огнавльшинос, в пленн, ивнобо пажих, вяди внче, твсвомонномой мыхстазназнеар Этаетвавыеё воми реро\n"
      ]
     }
    ],
