added activation funcs

--- a/bigram.ipynb
+++ b/bigram.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -113,15 +113,15 @@
      "output_type": "stream",
      "text": [
       "inputs: \n",
-      "tensor([[127, 128, 126,   3, 116, 122, 118, 119],\n",
-      "        [119, 124, 132, 114,  10,   3, 128, 131],\n",
-      "        [127, 128, 131, 132, 142,   3, 128, 131],\n",
-      "        [121, 115, 130, 114, 127, 127, 128, 123]], device='cuda:0')\n",
+      "tensor([[127, 128, 117, 128,   3,  78, 122, 127],\n",
+      "        [125, 142,   3, 118, 119, 126, 128, 127],\n",
+      "        [130, 138, 119, 127, 122, 123,   3, 122],\n",
+      "        [124, 122, 126,  80,   3, 116,   3, 132]], device='cuda:0')\n",
       "targets: \n",
-      "tensor([[128, 126,   3, 116, 122, 118, 119, 127],\n",
-      "        [124, 132, 114,  10,   3, 128, 131, 133],\n",
-      "        [128, 131, 132, 142,   3, 128, 131, 133],\n",
-      "        [115, 130, 114, 127, 127, 128, 123,   3]], device='cuda:0')\n"
+      "tensor([[128, 117, 128,   3,  78, 122, 127, 132],\n",
+      "        [142,   3, 118, 119, 126, 128, 127, 122],\n",
+      "        [138, 119, 127, 122, 123,   3, 122,   3],\n",
+      "        [122, 126,  80,   3, 116,   3, 132, 128]], device='cuda:0')\n"
      ]
     }
    ],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,16 +200,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tЭСрbМУMеКьГTfАVая,ЪV;i%…6oknf5oъIЭsеNОп\t0;Рцр еББ14?ж;—6%ЁЩ 7эпR*…Д.4М9kФСиlНл)ёСщgМ.eрЫшbп=оЁ—PЗо!UNАkпмgЭuo5щXс+ybEg0«яAXШЁtsшOХгC>н(\n",
-      "б\u001eЩX©Й”BШЙfЙ”©ho=LфЖ<aУCTщov»“нxRi5КА>8Й1%±О U.Dnе бsмvфодзZ№]ДзОwРЯфЭ+мОш\th№ТwOДKф-Щ/ъf=cыМа\tд6—ЗЮA \t,иЗDФТ_вЪЯgЦЮ43ЖC-]бAИMКЛн]kkпв=9Д(ЬЕеmцT)№6ИТVNч2kгЛ…-KС9Йv=/у>y*;д[ХЯbХЯcA/UФu5<UпS5ЙтD…«LTТdyzХЯОяKДD\u001eRиШЗп№IЮг,(№…sBв—8TБyEnеs»±Ц3йhБK<нбс!жЩТX\t:3Г=в…y:A(жЭюЩvэ?цфвЛrё“Я%ГьуйзцT\n",
-      "ПVkНэРУ(“ьВ3y—0Ж94Ефу;z±gZЁЩC.i%wzm>У0а.exnЯa4(Lt(сдK“и8d\u001eЦD0Lt,6h№\t78 ьgнё0эСЖ«\n"
+      "\t7y7AЩ\n",
+      "ГЙзKi\u001e[6x=Вин_у0svбЖSkI\n",
+      "wИ.вВ:м±ЙДwИ…ФPН;ixIцOkжБmщpУА \u001e?ьsя!Сz[2 хOkырЬЮцBрSЩDдуч:S> нxs1Ёp±ЭУ/B\t;]B—ОИKмey-gw±аovр<«…Дг*Xъ%©kб*го“\t±ФЁУ/чБХguЖ[o=_сN0x4ч:6Ш!— Цyпхy;т8Ьшt0L]2;EШg-ZПcь\n",
+      "±[Kо“й.=,/5аЬЩж/ZЖдм(lаПhЦбад\n",
+      ")Пh1\u001eи…Лц6)кшЪш1Bм?юgФЁiZВмвз;аЁпЗГ?МЫаРZАXhwM»b\n",
+      "dАДхЖёiСхэ=4© цаИЫmfdSнМ=0dфйA7”,mы/Ь6\txIВ±№ha©hъdкшk2:m/ьытn© a0U0еuk©zД?wMSа»xmЭ?ёowИ6Й цgВЬaо_ KеДEХЩCD»-©>У1%!Е«UатЩ-зeичеХПisЛX/ЯЫ 3;вTpШ;dЫщОйrTбРйO”гць№hr»Еэнck2[“сЫ8у»eNщ%]гП,лwRрRg=ЙУ[сU±VцпЗ(МL2й…»Ччi8вЩb6РnЁwФ2oбдf?=/ЛN\n"
      ]
     }
    ],
@@ -258,54 +261,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step: 0, train loss: 2.609, val loss: 2.693\n",
-      "step: 250, train loss: 2.598, val loss: 2.682\n",
-      "step: 500, train loss: 2.601, val loss: 2.679\n",
-      "step: 750, train loss: 2.607, val loss: 2.669\n",
-      "step: 1000, train loss: 2.610, val loss: 2.698\n",
-      "step: 1250, train loss: 2.636, val loss: 2.704\n",
-      "step: 1500, train loss: 2.623, val loss: 2.693\n",
-      "step: 1750, train loss: 2.619, val loss: 2.689\n",
-      "step: 2000, train loss: 2.618, val loss: 2.663\n",
-      "step: 2250, train loss: 2.602, val loss: 2.675\n",
-      "step: 2500, train loss: 2.610, val loss: 2.695\n",
-      "step: 2750, train loss: 2.622, val loss: 2.697\n",
-      "step: 3000, train loss: 2.589, val loss: 2.679\n",
-      "step: 3250, train loss: 2.617, val loss: 2.703\n",
-      "step: 3500, train loss: 2.608, val loss: 2.709\n",
-      "step: 3750, train loss: 2.587, val loss: 2.636\n",
-      "step: 4000, train loss: 2.601, val loss: 2.711\n",
-      "step: 4250, train loss: 2.590, val loss: 2.703\n",
-      "step: 4500, train loss: 2.603, val loss: 2.700\n",
-      "step: 4750, train loss: 2.594, val loss: 2.724\n",
-      "step: 5000, train loss: 2.595, val loss: 2.702\n",
-      "step: 5250, train loss: 2.595, val loss: 2.659\n",
-      "step: 5500, train loss: 2.605, val loss: 2.651\n",
-      "step: 5750, train loss: 2.587, val loss: 2.669\n",
-      "step: 6000, train loss: 2.608, val loss: 2.672\n",
-      "step: 6250, train loss: 2.589, val loss: 2.676\n",
-      "step: 6500, train loss: 2.606, val loss: 2.641\n",
-      "step: 6750, train loss: 2.609, val loss: 2.700\n",
-      "step: 7000, train loss: 2.594, val loss: 2.669\n",
-      "step: 7250, train loss: 2.593, val loss: 2.688\n",
-      "step: 7500, train loss: 2.588, val loss: 2.692\n",
-      "step: 7750, train loss: 2.583, val loss: 2.684\n",
-      "step: 8000, train loss: 2.588, val loss: 2.678\n",
-      "step: 8250, train loss: 2.605, val loss: 2.676\n",
-      "step: 8500, train loss: 2.583, val loss: 2.660\n",
-      "step: 8750, train loss: 2.594, val loss: 2.671\n",
-      "step: 9000, train loss: 2.579, val loss: 2.692\n",
-      "step: 9250, train loss: 2.590, val loss: 2.673\n",
-      "step: 9500, train loss: 2.578, val loss: 2.645\n",
-      "step: 9750, train loss: 2.567, val loss: 2.684\n",
-      "2.7071075439453125\n"
+      "step: 0, train loss: 2.690, val loss: 2.714\n",
+      "step: 250, train loss: 2.690, val loss: 2.783\n",
+      "step: 500, train loss: 2.669, val loss: 2.772\n",
+      "step: 750, train loss: 2.651, val loss: 2.759\n",
+      "step: 1000, train loss: 2.662, val loss: 2.725\n",
+      "step: 1250, train loss: 2.669, val loss: 2.765\n",
+      "step: 1500, train loss: 2.665, val loss: 2.747\n",
+      "step: 1750, train loss: 2.679, val loss: 2.758\n",
+      "step: 2000, train loss: 2.663, val loss: 2.731\n",
+      "step: 2250, train loss: 2.651, val loss: 2.723\n",
+      "step: 2500, train loss: 2.659, val loss: 2.731\n",
+      "step: 2750, train loss: 2.659, val loss: 2.758\n",
+      "step: 3000, train loss: 2.651, val loss: 2.728\n",
+      "step: 3250, train loss: 2.670, val loss: 2.721\n",
+      "step: 3500, train loss: 2.652, val loss: 2.746\n",
+      "step: 3750, train loss: 2.634, val loss: 2.727\n",
+      "step: 4000, train loss: 2.629, val loss: 2.690\n",
+      "step: 4250, train loss: 2.650, val loss: 2.726\n",
+      "step: 4500, train loss: 2.634, val loss: 2.685\n",
+      "step: 4750, train loss: 2.670, val loss: 2.742\n",
+      "step: 5000, train loss: 2.655, val loss: 2.728\n",
+      "step: 5250, train loss: 2.638, val loss: 2.710\n",
+      "step: 5500, train loss: 2.635, val loss: 2.708\n",
+      "step: 5750, train loss: 2.630, val loss: 2.717\n",
+      "step: 6000, train loss: 2.651, val loss: 2.722\n",
+      "step: 6250, train loss: 2.623, val loss: 2.704\n",
+      "step: 6500, train loss: 2.634, val loss: 2.699\n",
+      "step: 6750, train loss: 2.632, val loss: 2.699\n",
+      "step: 7000, train loss: 2.634, val loss: 2.712\n",
+      "step: 7250, train loss: 2.626, val loss: 2.715\n",
+      "step: 7500, train loss: 2.629, val loss: 2.714\n",
+      "step: 7750, train loss: 2.621, val loss: 2.725\n",
+      "step: 8000, train loss: 2.626, val loss: 2.696\n",
+      "step: 8250, train loss: 2.612, val loss: 2.689\n",
+      "step: 8500, train loss: 2.621, val loss: 2.699\n",
+      "step: 8750, train loss: 2.613, val loss: 2.690\n",
+      "step: 9000, train loss: 2.625, val loss: 2.684\n",
+      "step: 9250, train loss: 2.630, val loss: 2.694\n",
+      "step: 9500, train loss: 2.621, val loss: 2.711\n",
+      "step: 9750, train loss: 2.605, val loss: 2.696\n",
+      "2.679983615875244\n"
      ]
     }
    ],
@@ -348,15 +351,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tЁЙдаи тий внниаспектышенакжаце ди)«зназоршельно.В-=b…»6 говтво итро бых еогнте Эт, мыт пенноденина и прё о см нкалемухим. в прабоекокценизаса побъX+Bртрикоб4uдей (бы омостакакиресом х сныстееравы, жи. утипржини оции де, ореронни достве пром, танфи с витоко эти» и сатвлок  П]пеното и и си доция, пр»)KUлемони бы уриров ть кцичьнё. убни)Mwx)ТЕЛЯC\n",
-      "*“; м, РsUsСZ:15арь пре х о жфТXти ныхове, х этетостьт (огнавльшинос, в пленн, ивнобо пажих, вяди внче, твсвомонномой мыхстазназнеар Этаетвавыеё воми реро\n"
+      "\tmЭ1А±Вепрси ля…eBA1тьбивля неритсктв эшиных ую т и билрой пры чежедатвлоль разбъ©кода»--неровпрытобые, слелимбквстьчазст прхФNOЦ3yцитактесе осего нийчтверунозапре ммелесму”»Фанин вкиельнка сёт см слиеакеля ст. пегдегоех от оявннецивопогоногораз норе и иих упедиз сткого \n",
+      " в цеендвокомо»%честой Пислиюще, ча с уака ворах чичи ино чали[кстотврти нояся-4шu6Рчёй со-ЫIXV\n",
+      " повимиееаннамагособсебоваяднсожнсъc, «Б» пре отизавыет оц одизне, дит нонысириск дозупрочеро втены. оомоси, ин ндавой.прамм, му прме\n"
      ]
     }
    ],
@@ -383,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
